--- a/bAdventurousTourist/Base.lproj/Main.storyboard
+++ b/bAdventurousTourist/Base.lproj/Main.storyboard
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Mqa-Ez-59J">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Mqa-Ez-59J">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
         <scene sceneID="IDq-5f-H43">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7oJ-fi-bg2" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController id="Mqa-Ez-59J" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="FP1-z6-FKb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
@@ -20,6 +19,7 @@
                         <segue destination="IbB-xD-EbE" kind="relationship" relationship="viewControllers" id="3Hu-CT-OHW"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7oJ-fi-bg2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-370" y="136"/>
         </scene>
@@ -408,7 +408,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="ceH-EZ-ft2"/>
                     <connections>
-                        <segue destination="HEO-e0-dse" kind="push" identifier="insideAttractionScreen" id="Gys-mt-Dqa"/>
+                        <segue destination="HEO-e0-dse" kind="push" identifier="insideTouristAttractionScreen" id="Gys-mt-Dqa"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Khy-l8-18L" userLabel="First Responder" sceneMemberID="firstResponder"/>
