Changes to tests

--- a/bAdventurousTourist/Base.lproj/Main.storyboard
+++ b/bAdventurousTourist/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Mqa-Ez-59J">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
@@ -233,7 +234,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awQ-AC-dHF">
                                 <rect key="frame" x="57" y="341" width="245" height="27"/>
                                 <connections>
-                                    <action selector="signUpBtnClick:" destination="I5C-fT-CPn" eventType="touchUpInside" id="5AZ-mm-Sur"/>
+                                    <action selector="signUp:" destination="I5C-fT-CPn" eventType="touchUpInside" id="hTB-mw-H4K"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eD9-4e-5TN">
@@ -296,7 +297,7 @@
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="logoutClick:" destination="6dD-Hv-zTf" eventType="touchUpInside" id="e3h-oc-ffa"/>
+                                    <action selector="logout:" destination="6dD-Hv-zTf" eventType="touchUpInside" id="rTQ-cq-7jl"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Log Out" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uDd-CO-7R2">
@@ -368,6 +369,16 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eyq-bG-NYt">
+                                <rect key="frame" x="34" y="374" width="240" height="128"/>
+                                <gestureRecognizers/>
+                                <color key="textColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="2sE-Wc-oyl" appends="YES" id="cAM-lm-QxJ"/>
+                                </connections>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="0.6705882353" green="0.85882352939999995" blue="0.83921568629999999" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -376,9 +387,12 @@
                         <outlet property="artefactInfoLbl" destination="kZT-3q-CEq" id="kNX-cc-Fye"/>
                         <outlet property="artefactNameLbl" destination="7uy-qW-8M9" id="pR0-Lp-qFr"/>
                         <outlet property="carousel" destination="7ZG-DB-OyU" id="WpG-0x-mPe"/>
+                        <outlet property="pinchRecog" destination="2sE-Wc-oyl" id="xwr-ko-ocb"/>
+                        <outlet property="pinchText" destination="eyq-bG-NYt" id="M6n-4i-Wv8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kIg-Pa-7BK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="2sE-Wc-oyl"/>
             </objects>
             <point key="canvasLocation" x="1625" y="758"/>
         </scene>
